--- a/style/style.css
+++ b/style/style.css
@@ -3,35 +3,12 @@
 	margin: 0;
 }
 
-html {
-    -webkit-transition: background-color 1s;
-    transition: background-color 1s;
-}
-html, body {
-    /* For the loading indicator to be vertically centered ensure */
-    /* the html and body elements take up the full viewport */
-    min-height: 100%;
-}
-html.loading {
-    /* Replace #333 with the background-color of your choice */
-    /* Replace loading.gif with the loading image of your choice */
-    background: #333 url('loading.gif') no-repeat 50% 50%;
-
-    /* Ensures that the transition only runs in one direction */
-    -webkit-transition: background-color 0;
-    transition: background-color 0;
-}
-body {
-    -webkit-transition: opacity 1s ease-in;
-    transition: opacity 1s ease-in;
-}
-html.loading body {
-    /* Make the contents of the body opaque during loading */
-    opacity: 0;
-
-    /* Ensures that the transition only runs in one direction */
-    -webkit-transition: opacity 0;
-    transition: opacity 0;
+.no-js #loader { display: none;  }
+.js #loader {
+	display: block;
+	position: absolute;
+	left: 100px;
+	top: 0;
 }
 
 .container {
@@ -53,11 +30,8 @@ html.loading body {
 	display: inline-block;
 }
 
-.profile__left-section img{
+.profile__left-section img {
 	max-width: 100%;
-}
-
-img {
 	width: 200px;
 	height: 200px;
 	padding: 40px;
