--- a/style/style.css
+++ b/style/style.css
@@ -3,12 +3,14 @@
 	margin: 0;
 }
 
-.no-js #loader { display: none;  }
-.js #loader {
-	display: block;
-	position: absolute;
-	left: 100px;
-	top: 0;
+.loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url('../images/progress.gif') 50% 50% no-repeat rgb(249,249,249);
 }
 
 .container {
