--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url('../images/progress.gif') 50% 50% no-repeat rgb(249,249,249);
+	background: url('../images/loader.gif') 50% 50% no-repeat #fff;
 }
 
 .container {
